# AgenticCrawler

./: .env.example  .gitignore  README.md  note_to_self.txt  pyproject.toml
scripts/: run_agent.py  run_multi_agent.py
src/ai_browser/: __init__.py  config.py  state.py
src/ai_browser/agents/: __init__.py  navigator.py  orchestrator.py  parser.py  single.py
src/ai_browser/schemas/: __init__.py  job.py
src/ai_browser/tools/: __init__.py  browser.py  dom.py  storage.py  utility.py
src/ai_browser/utils/: __init__.py  browser_manager.py  html_cleaner.py  runtime.py
